tests/baselines/reference/generatorTypeCheck18.errors.txt
generatorTypeCheck18.ts(4,5): error TS2322: Type 'undefined' is not assignable to type 'Foo'.
generatorTypeCheck18.ts(5,11): error TS2741: Property 'x' is missing in type 'Baz' but required in type 'Foo'.


==== generatorTypeCheck18.ts (2 errors) ====
    class Foo { x: number }
    class Baz { z: number }
    function* g(): IterableIterator<Foo> {
        yield;
        ~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'Foo'.
        yield new Baz;
              ~~~~~~~
!!! error TS2741: Property 'x' is missing in type 'Baz' but required in type 'Foo'.
!!! related TS2728 generatorTypeCheck18.ts:1:13: 'x' is declared here.
    }